fix(Notification): Fix alignment of text message in notifications

--- a/src/components/UI-kit/Notification/styles.less
+++ b/src/components/UI-kit/Notification/styles.less
@@ -37,6 +37,9 @@
     font-size: 16px;
     line-height: 18px;
   }
+  .ant-notification-notice-message {
+    margin-bottom: 0 !important;
+  }
   .ant-notification-notice-icon {
     top: 50%;
     transform: translateY(-50%);
